@@ -25,7 +25,6 @@ import (
 	"net/http"
 	"net/url"
 	"os"
-	"regexp"
 	"strings"
 	"sync"
 	"time"
@@ -732,8 +731,6 @@ func subsub(user *WhatAbout, xid string) {
 	deliverate(0, user.Name, xid, msg)
 }
 
-var re_spicy = regexp.MustCompile("^(\U0001f336\ufe0f?){3,}")
-
 func jonkjonk(user *WhatAbout, h *Honk) (junk.Junk, junk.Junk) {
 	dt := h.Date.Format(time.RFC3339)
 	var jo junk.Junk
@@ -779,9 +776,6 @@ func jonkjonk(user *WhatAbout, h *Honk) (junk.Junk, junk.Junk) {
 		jo["summary"] = h.Precis
 		jo["content"] = mentionize(h.Noise)
 		if strings.HasPrefix(h.Precis, "DZ:") {
-			jo["sensitive"] = true
-		} else if peppers := re_spicy.FindString(h.Noise); peppers != "" {
-			jo["summary"] = peppers
 			jo["sensitive"] = true
 		}
 
